--- a/Exoskeleton.csproj
+++ b/Exoskeleton.csproj
@@ -50,8 +50,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChildWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChildWindow.Designer.cs">
+      <DependentUpon>ChildWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\MimeTypeMappings.cs" />
-    <Compile Include="Classes\ScriptMain.cs" />
+    <Compile Include="Classes\API\ScriptMain.cs" />
+    <Compile Include="Classes\API\ScriptSession.cs" />
+    <Compile Include="Classes\API\ScriptSystem.cs" />
+    <Compile Include="Classes\API\ScriptLogger.cs" />
+    <Compile Include="IHostWindow.cs" />
+    <Compile Include="LoggerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoggerForm.Designer.cs">
+      <DependentUpon>LoggerForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,13 +76,19 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Classes\ScriptFile.cs" />
-    <Compile Include="Classes\ScriptInterface.cs" />
-    <Compile Include="Classes\ScriptMedia.cs" />
-    <Compile Include="Classes\ScriptProcess.cs" />
+    <Compile Include="Classes\API\ScriptFile.cs" />
+    <Compile Include="Classes\API\ScriptInterface.cs" />
+    <Compile Include="Classes\API\ScriptMedia.cs" />
+    <Compile Include="Classes\API\ScriptProcess.cs" />
     <Compile Include="Classes\SerializableDictionary.cs" />
     <Compile Include="Classes\Settings.cs" />
     <Compile Include="Classes\SimpleHTTPServer.cs" />
+    <EmbeddedResource Include="ChildWindow.resx">
+      <DependentUpon>ChildWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoggerForm.resx">
+      <DependentUpon>LoggerForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
