expanded api, refactored js library, and started jsdoc

--- a/Exoskeleton.csproj
+++ b/Exoskeleton.csproj
@@ -56,11 +56,15 @@
     <Compile Include="ChildWindow.Designer.cs">
       <DependentUpon>ChildWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\API\ScriptComObjects.cs" />
+    <Compile Include="Classes\API\ScriptEncryption.cs" />
+    <Compile Include="Classes\API\ScriptNet.cs" />
     <Compile Include="Classes\MimeTypeMappings.cs" />
     <Compile Include="Classes\API\ScriptMain.cs" />
     <Compile Include="Classes\API\ScriptSession.cs" />
     <Compile Include="Classes\API\ScriptSystem.cs" />
     <Compile Include="Classes\API\ScriptLogger.cs" />
+    <Compile Include="Classes\StringCipher.cs" />
     <Compile Include="IHostWindow.cs" />
     <Compile Include="LoggerForm.cs">
       <SubType>Form</SubType>
