added menu, toolbar, and statusbar api support
added menu, toolbar and statusbar to api
updated exo console example to use all three
added loadable examples to exo console
updated docs
cleaned up c# interfaces
updated prebuilt binary

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ obj/
 bin/
 Examples/database-example/database-example.json
 Examples/interactive-console/sampledata/
+!Examples/interactive-console/sampledata/placeholder.txt
 *.user
