--- a/Exoskeleton.csproj
+++ b/Exoskeleton.csproj
@@ -57,6 +57,7 @@
       <DependentUpon>ChildWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\API\ScriptComObjects.cs" />
+    <Compile Include="Classes\API\ScriptDialog.cs" />
     <Compile Include="Classes\API\ScriptEncryption.cs" />
     <Compile Include="Classes\API\ScriptMenu.cs" />
     <Compile Include="Classes\API\ScriptNet.cs" />
