--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ bin/
 Examples/database-example/database-example.json
 Examples/interactive-console/sampledata/
 !Examples/interactive-console/sampledata/placeholder.txt
+Examples/interactive-console/settings-db.json
 *.user
