--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ Examples/database-example/database-example.json
 Examples/interactive-console/sampledata/
 !Examples/interactive-console/sampledata/placeholder.txt
 Examples/interactive-console/settings-db.json
+Examples/native-example/contacts-database.json
 *.user
