--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@ Examples/interactive-console/sampledata/
 !Examples/interactive-console/sampledata/placeholder.txt
 Examples/interactive-console/settings-db.json
 Examples/native-example/contacts-database.json
+Examples/radio-example/station-database.json
 *.user
