Reworked Logger and reduce flickering on native app startup
Logger is now a single screen shared by all windows and hidden by default.  To show the logger/console (if enabled), right click on the system tray icon.  Notifications for errors (when logger is hidden) are customizable via settings now.  Clicking on error/warning/info notification will open the logger to examine those messages.

--- a/Exoskeleton.csproj
+++ b/Exoskeleton.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Classes\API\ScriptLogger.cs" />
     <Compile Include="Classes\StringCipher.cs" />
     <Compile Include="IHostWindow.cs" />
+    <Compile Include="ILogWindow.cs" />
     <Compile Include="IPrimaryHostWindow.cs" />
     <Compile Include="LoggerForm.cs">
       <SubType>Form</SubType>
