Initial Implementation of webservices functionality
Webservices in exoskeleton will be mostly for communicating with external systems.  If webservices are enabled and WebServerSelfHost is enabled, all requests for certain file extensions, such as .svc will be routed to javascript within your main window to process via (exoskeleton enhanced) javascript function that you implement.

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ Examples/interactive-console/sampledata/
 Examples/interactive-console/settings-db.json
 Examples/native-example/contacts-database.json
 Examples/radio-example/station-database.json
+Examples/webservice-example/contacts-database.json
 *.user
