finalization for 0.8 release
- cleaned up locations and systemInfo; locations returns resolved paths to many locations, paths in application settings will be unresolved, removed hosted root from system info (use locations instead).
- exoskseleton version can now be queries via system.getSystemInfo() under 'ExoVersion' and 'ProductVersion' properties.
- cleaned up xml pathnames in XOS settings files to not double backslash

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,7 @@ Examples/interactive-console/settings-db.json
 Examples/native-example/contacts-database.json
 Examples/radio-example/station-database.json
 Examples/webservice-example/contacts-database.json
+Examples/audioplayer-example/player-settings.json
+Prebuilt/exo-global-settings.xml
+Prebuilt/exo-mappings.xml
 *.user
